(raf) Core: Using Alexander Berl (a.k.a. Raphael) routines for VRAM allocation.
(raf) VIS: Added a cube visualizer, displays a scope on every side.
BUG FIXES
(raf) Core: Fixed an old bug where if a song had no metadata (like an old MP3 without ID3 info), the metadata would be populated from the currently highlighted song.
KNOWN BUGS
(raf) TextUI: When switching skins all the text will disappear. This happens on occasion. Just move up or down for the text to re-render.
OE related Problems on this release
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.  (Also, make sure CPU speed is 222 when establishing a WiFi connection). Possible solution, if you have a proxy server in your network, set it up in PSPRadio.cfg. A static IP may work then. (This is untested).

1.18.1377 (2007-04-02)
NEW FEATURES
(raf) TextUI: Msgbox now goes away after 3sec (not based on frames rendered anymore, but time).
(raf) Core: (Supported by TextUI) Framerate configuration file is now set globally in PSPRadio.cfg (PLUGINS:DISPLAY_FPS)
(raf) TextUI: Now uses GU more; which reduces flickering and improves framerate. 
(raf) TextUI: Cleaned up the way stream time and info is displayed while on fullscreen visualization mode.
BUG FIXES
(raf) Core: PSPRadio would crash on startup if the visualizer plugin was disabled.
(raf) Core: PSPRadio would crash on startup if the SHOUTcast database (newdb.xml) file was empty.
(raf) TextUI: Corrected problem where PSPRadio would crash when downloading the SHOUTcast database. (The problem was caused by lack of complete support for values -1 and -2 in the configuration files after the TextUI rendering changes.
(raf) TextUI: Corrected problem that caused a crash when switching from TextUI3d to TextUI.
(raf) Core: Corrected problem that caused a crash on restore from suspend mode when the wifi was enabled. Now it will also resume play.