@@ -9,6 +9,7 @@ NEW FEATURES
 (raf) VIS: Added a cube visualizer, displays a scope on every side.
 BUG FIXES
 (raf) Core: Fixed an old bug where if a song had no metadata (like an old MP3 without ID3 info), the metadata would be populated from the currently highlighted song.
+(raf) TextUI: Fixed crash that could be caused if switching screens (START) while starting a plugin (specially a visualizer).
 KNOWN BUGS
 (raf) TextUI: When switching skins all the text will disappear. This happens on occasion. Just move up or down for the text to re-render.
 OE related Problems on this release
